[package]
name = "webview-sys"
version = "0.6.2"
authors = ["Boscop", "zxey <r.hozak@seznam.cz>"]
license = "MIT"
repository = "https://github.com/evangrayk/web-view"
description = "Rust native ffi bindings for webview"
keywords = ["web", "gui", "desktop", "electron", "webkit"]
categories = ["gui", "web-programming", "api-bindings", "rendering", "visualization"]
build = "build.rs"
links = "webview"
edition = "2018"
exclude = ["Cargo.lock"]

[lib]
name = "webview_sys"
path = "lib.rs"

[build-dependencies]
cc = "1"
